--- a/src/styles/components/NavBar.module.css
+++ b/src/styles/components/NavBar.module.css
@@ -1,9 +1,19 @@
 .btn {
   color: red;
   margin: 0;
+  padding: 20px;
 }
 
 .btn:hover {
   color: grey;
   font-weight: bold;
+}
+
+#show {
+  color: green;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  overflow: hidden;
 }
