--- a/src/styles/routes/Home.module.css
+++ b/src/styles/routes/Home.module.css
@@ -1,11 +1,11 @@
 .MainName {
   margin: 0 auto;
-  text-align: center;
-  padding: 0 0 0 30px;
 }
 
 .header {
   display: flex;
   width: 100%;
-  padding: 20px;
+  position: fixed;
+  z-index: 100;
+  background-color: wheat;
 }
