--- a/src/styles/components/NavBar.module.css
+++ b/src/styles/components/NavBar.module.css
@@ -1,7 +1,9 @@
 .btn {
   color: red;
   margin: 0;
-  padding: 20px;
+  position: fixed;
+  z-index: 99;
+  width: 100%;
 }
 
 .btn:hover {
@@ -9,11 +11,43 @@
   font-weight: bold;
 }
 
+.test {
+  width: 100%;
+}
+
+.test:first-child {
+  padding-top: 7px;
+  position: absolute;
+}
+
 #show {
   color: green;
   width: 100%;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.5);
-  position: absolute;
+  background-color: rgba(0, 0, 0, 0.7);
   overflow: hidden;
+  transition: all 0.5s;
+}
+
+@keyframes fadeInMenuLeft {
+  0% {
+    opacity: 0;
+    transform: translate3d(-100%, 0, 0);
+  }
+  100% {
+    opacity: 1;
+    transform: translateZ(0);
+  }
+}
+
+#showModal {
+  width: 30%;
+  background-color: white;
+  height: 100vh;
+  animation: fadeInMenuLeft 0.5s;
+}
+
+.modalText {
+  text-align: center;
+  animation: fadeInMenuLeft 1s;
 }
