--- a/src/styles/routes/Home.module.css
+++ b/src/styles/routes/Home.module.css
@@ -1,11 +1,17 @@
+.home {
+  width: 100%;
+}
+
 .MainName {
-  margin: 0 auto;
+  position: fixed;
+  left: 50%;
 }
 
 .header {
   display: flex;
   width: 100%;
-  position: fixed;
-  z-index: 100;
+  height: 40px;
+  align-items: center;
   background-color: wheat;
+  position: fixed;
 }
