--- a/src/styles/components/NavBar.module.css
+++ b/src/styles/components/NavBar.module.css
@@ -40,14 +40,63 @@
   }
 }
 
-#showModal {
-  width: 30%;
+@keyframes fadeInModalBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(100px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+#showNavBar {
+  width: 300px;
   background-color: white;
   height: 100vh;
   animation: fadeInMenuLeft 0.5s;
 }
 
-.modalText {
+.navbar_info {
   text-align: center;
+}
+
+.navbar_text {
   animation: fadeInMenuLeft 1s;
+  padding-top: 100px;
+  font-size: 22px;
+}
+
+.navbar_footer {
+  margin-top: 50px;
+  animation: fadeInModalBottom 2s;
+}
+
+.navbar_footer_text {
+  width: 100%;
+  max-width: 50%;
+  padding: 10px 0;
+  box-sizing: border-box;
+  color: grey;
+  cursor: pointer;
+  font-weight: bold;
+  border: none;
+  border-radius: 10px;
+  background-color: #e1f5fe;
+}
+
+.logout_btn {
+  width: 100%;
+  max-width: 50%;
+  margin-top: 30px;
+  padding: 10px 0;
+  box-sizing: border-box;
+  color: white;
+  cursor: pointer;
+  font-weight: bold;
+  border: none;
+  border-radius: 10px;
+  background-color: #f15f5f;
+  animation: fadeInModalBottom 3s;
 }
