--- a/src/styles/components/NavBar.module.css
+++ b/src/styles/components/NavBar.module.css
@@ -1,34 +1,3 @@
-.btn {
-  color: red;
-  margin: 0;
-  position: fixed;
-  z-index: 99;
-  width: 100%;
-}
-
-.btn:hover {
-  color: grey;
-  font-weight: bold;
-}
-
-.test {
-  width: 100%;
-}
-
-.test:first-child {
-  padding-top: 7px;
-  position: absolute;
-}
-
-#show {
-  color: green;
-  width: 100%;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.7);
-  overflow: hidden;
-  transition: all 0.5s;
-}
-
 @keyframes fadeInMenuLeft {
   0% {
     opacity: 0;
@@ -43,12 +12,52 @@
 @keyframes fadeInModalBottom {
   0% {
     opacity: 0;
-    transform: translateY(100px);
+    transform: translateY(50px);
   }
   100% {
     opacity: 1;
     transform: translateY(0);
   }
+}
+
+@keyframes rotateCog {
+  100% {
+    transform: rotateZ(360deg);
+  }
+}
+
+.navbar_wrap {
+  color: grey;
+  margin: 0;
+  position: fixed;
+  z-index: 99;
+  width: 100%;
+  font-size: 23px;
+}
+
+.icon_setting:hover {
+  color: darkcyan;
+  font-weight: bold;
+  animation: rotateCog 1s linear infinite;
+}
+
+.navbar_textbox {
+  width: 100%;
+  margin-left: 15px;
+}
+
+.navbar_textbox:first-child {
+  padding-top: 9px;
+  position: absolute;
+}
+
+#show {
+  color: green;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.7);
+  overflow: hidden;
+  transition: all 0.5s;
 }
 
 #showNavBar {
