--- a/src/styles/components/NavBar.module.css
+++ b/src/styles/components/NavBar.module.css
@@ -12,7 +12,7 @@
 @keyframes fadeInModalBottom {
   0% {
     opacity: 0;
-    transform: translateY(50px);
+    transform: translateY(100px);
   }
   100% {
     opacity: 1;
@@ -39,25 +39,27 @@
   color: darkcyan;
   font-weight: bold;
   animation: rotateCog 1s linear infinite;
+  cursor: pointer;
 }
 
 .navbar_textbox {
   width: 100%;
+  height: 40px;
   margin-left: 15px;
+  display: flex;
+  align-items: center;
 }
 
 .navbar_textbox:first-child {
-  padding-top: 9px;
   position: absolute;
 }
 
 #show {
-  color: green;
   width: 100%;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.7);
   overflow: hidden;
-  transition: all 0.5s;
+  transition: all 1s;
 }
 
 #showNavBar {
@@ -73,16 +75,24 @@
 
 .navbar_text {
   animation: fadeInMenuLeft 1s;
-  padding-top: 100px;
+  padding-top: 110px;
   font-size: 22px;
 }
 
-.navbar_footer {
-  margin-top: 50px;
-  animation: fadeInModalBottom 2s;
+.navbar_identity__username {
+  font-weight: bold;
 }
 
-.navbar_footer_text {
+.navbar_identity__welcome__text {
+  color: green;
+}
+
+.navbar_close {
+  margin-top: 30px;
+  animation: fadeInModalBottom 1.5s;
+}
+
+.navbar_close__btn {
   width: 100%;
   max-width: 50%;
   padding: 10px 0;
@@ -95,10 +105,32 @@
   background-color: #e1f5fe;
 }
 
-.logout_btn {
+.navbar_update_profile {
+  margin-top: 30px;
+  animation: fadeInModalBottom 2s;
+}
+
+.navbar_update_profile_btn {
   width: 100%;
   max-width: 50%;
+  padding: 10px 0;
+  box-sizing: border-box;
+  color: grey;
+  cursor: pointer;
+  font-weight: bold;
+  border: none;
+  border-radius: 10px;
+  background-color: #eafee1;
+}
+
+.navbar_logout {
   margin-top: 30px;
+  animation: fadeInModalBottom 2.5s;
+}
+
+.navbar_logout__btn {
+  width: 100%;
+  max-width: 50%;
   padding: 10px 0;
   box-sizing: border-box;
   color: white;
@@ -107,5 +139,4 @@
   border: none;
   border-radius: 10px;
   background-color: #f15f5f;
-  animation: fadeInModalBottom 3s;
 }
