Login 라우터 디자인 일부 수정

--- a/src/styles/routes/Login.module.css
+++ b/src/styles/routes/Login.module.css
@@ -1,7 +1,4 @@
 .login_wrap {
-  width: 100%;
-  height: 100vh;
-  background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
   overflow-y: hidden;
 }
 
@@ -13,6 +10,7 @@
   align-items: center;
   padding: 30px 0 0 0;
   box-sizing: border-box;
+  margin-top: 100px;
 }
 
 .header__title {
@@ -39,14 +37,24 @@
   border: none;
   border-radius: 5px;
   text-align: center;
+  border: 1px solid #4ec0e9;
 }
 
 .login_btn {
-  border-radius: 5px;
-  border: none;
-  margin-top: 15px;
   width: 305px;
   height: 40px;
+  margin-top: 15px;
+  color: #4ec0e9;
+  border-radius: 5px;
+  border: 1px solid #4ec0e9;
+  background-color: white;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.login_btn:hover {
+  background: linear-gradient(to bottom, #e9e9e9 5%, #f9f9f9 100%);
+  background-color: #e9e9e9;
 }
 
 .login_footer {
@@ -62,9 +70,16 @@
 }
 
 .login_footer_create {
-  border: none;
+  border: 1px solid #4e6096;
+  background-color: #7892c2;
   width: 300px;
   height: 40px;
-  color: grey;
+  color: white;
   font-weight: bold;
+  cursor: pointer;
+}
+
+.login_footer_create:hover {
+  background: linear-gradient(to bottom, #476e9e 5%, #7892c2 100%);
+  background-color: #476e9e;
 }
