--- a/src/styles/components/UpdateProfile.module.css
+++ b/src/styles/components/UpdateProfile.module.css
@@ -1,4 +1,93 @@
-.test {
+@keyframes displayTestAni {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeInModalBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(100px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.modal {
   width: 100%;
   height: 100vh;
+  background-color: #c7bcc7;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: displayTestAni 2s;
+  transition: all 2s;
+}
+
+.modal__info {
+  width: 450px;
+  height: 450px;
+  text-align: center;
+  background-color: white;
+  border-radius: 15px;
+  animation: fadeInModalBottom 1s ease-in-out;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+
+.modal__info_title {
+  margin: 30px 0;
+  font-weight: bold;
+}
+
+.modal_currentUser,
+.modal_newUser {
+  margin-bottom: 30px;
+}
+
+.modal_currentUser__input,
+.modal_newUser__input {
+  width: 100%;
+  max-width: 70%;
+  height: 30px;
+  text-align: center;
+  border-radius: 5px;
+}
+
+.modal_errorMsg {
+  color: red;
+  font-size: 14px;
+  margin-top: 15px;
+}
+
+.modal_footer {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 60px;
+}
+
+.modal_changeUserName_btn {
+  border: none;
+  padding: 15px 30px;
+  box-sizing: border-box;
+  border-radius: 10px;
+  background-color: blue;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.modal_close_btn {
+  border: none;
+  padding: 15px 30px;
+  box-sizing: border-box;
+  border-radius: 10px;
+  background-color: red;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
 }
